--- a/app/src/main/res/layout/fragment_list_manga.xml
+++ b/app/src/main/res/layout/fragment_list_manga.xml
@@ -7,6 +7,7 @@
     <ListView
         android:id="@+id/list_view_manga"
         android:layout_width="match_parent"
-        android:divider="@color/browser_actions_bg_grey"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:dividerHeight="1dp"
+        android:divider="@color/silver" />
 </LinearLayout>
