--- a/app/src/main/res/layout/item_horizontal_list.xml
+++ b/app/src/main/res/layout/item_horizontal_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="90dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="6dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -14,6 +14,7 @@
         app:cardCornerRadius="1dp">
 
         <ImageView
+            android:id="@+id/img_comic"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
@@ -22,8 +23,10 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/tv_title_comic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
         android:layout_marginTop="6dp"
         android:fontFamily="@font/comfortaa_regular"
         android:text="@string/app_name" />
