--- a/app/src/main/res/layout/item_horizontal_list_category.xml
+++ b/app/src/main/res/layout/item_horizontal_list_category.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+<TextView
     android:id="@+id/tv_title_category"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -10,3 +14,10 @@
     android:textStyle="bold">
 
 </TextView>
+    <View
+        android:id="@+id/divider_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/blue"
+        android:visibility="gone"/>
+</LinearLayout>
