--- a/app/src/main/res/layout/item_vertical_list.xml
+++ b/app/src/main/res/layout/item_vertical_list.xml
@@ -3,48 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp"
     android:orientation="horizontal"
-    android:weightSum="3.2">
+    android:padding="4dp"
+    >
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_weight="2.2"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
         app:cardElevation="1dp">
 
         <ImageView
-            android:id="@+id/detail_img"
+            android:id="@+id/icon_comic_img"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scaleType="fitXY" />
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="6dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="6dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
         <TextView
-            android:id="@+id/detail_title"
+            android:id="@+id/tv_detail_title"
             android:layout_width="match_parent"
+            android:singleLine="true"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
-            android:maxLines="2"
-            />
+            android:layout_marginBottom="2dp" />
+
         <TextView
-            android:id="@+id/detail_author"
+            android:id="@+id/tv_detail_author"
             android:layout_width="match_parent"
+            android:textStyle="italic"
             android:layout_height="wrap_content"
-            />
+            android:layout_marginBottom="2dp" />
+
         <TextView
-            android:id="@+id/detail_kind"
+            android:id="@+id/tv_detail_kind"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
 
