--- a/app/src/main/res/layout/fragment_category_view.xml
+++ b/app/src/main/res/layout/fragment_category_view.xml
@@ -7,10 +7,16 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
         android:id="@+id/horizontal_recycler_category"
         android:layout_width="match_parent"
-        android:background="@color/browser_actions_bg_grey"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        android:background="@color/gray_tran" />
+
+    <ListView
+        android:id="@+id/list_view_comic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/silver"
+        android:dividerHeight="1dp" />
 </LinearLayout>
