--- a/app/src/main/res/layout/item_horizontal_list_category.xml
+++ b/app/src/main/res/layout/item_horizontal_list_category.xml
@@ -3,21 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/ll_category"
     android:orientation="vertical">
-<TextView
-    android:id="@+id/tv_title_category"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:text="Action"
-    android:textStyle="bold">
 
-</TextView>
+    <TextView
+        android:id="@+id/tv_title_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:text="Action"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textStyle="bold">
+
+    </TextView>
+
     <View
         android:id="@+id/divider_horizontal"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/blue"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        />
 </LinearLayout>
