--- a/app/src/main/res/layout/fragment_category_view.xml
+++ b/app/src/main/res/layout/fragment_category_view.xml
@@ -10,8 +10,7 @@
         android:id="@+id/horizontal_recycler_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="8dp"
-        android:background="@color/gray_tran" />
+        android:background="@color/colorPrimary" />
 
     <ListView
         android:id="@+id/list_view_comic"
