--- a/app/src/main/res/layout/item_horizontal_list_category.xml
+++ b/app/src/main/res/layout/item_horizontal_list_category.xml
@@ -9,12 +9,12 @@
     <TextView
         android:id="@+id/tv_title_category"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:layout_height="48dp"
+        android:paddingStart="18dp"
+        android:paddingEnd="18dp"
         android:text="Action"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:textColor="@color/white"
+        android:gravity="center"
         android:textStyle="bold">
 
     </TextView>
