--- a/app/src/main/res/layout/activity_epub_viewer.xml
+++ b/app/src/main/res/layout/activity_epub_viewer.xml
@@ -9,14 +9,14 @@
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <net.bytecoding.koniki.epubWebView.EpubWebView
+    <WebView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true">
 
-    </net.bytecoding.koniki.epubWebView.EpubWebView>
+    </WebView>
 
 
 
