--- a/app/src/main/res/layout/activity_infor.xml
+++ b/app/src/main/res/layout/activity_infor.xml
@@ -23,6 +23,7 @@
             <RelativeLayout
                 android:id="@+id/header_layout"
                 android:layout_width="match_parent"
+                android:background="@color/colorPrimary"
                 android:layout_height="250dp">
                 <LinearLayout
                     android:layout_width="match_parent"
