--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="design_bottom_navigation_height" tools:override="true">50dp</dimen>
     <dimen name="design_bottom_navigation_icon_size" tools:override="true">22dp</dimen>
     <dimen name="design_bottom_navigation_active_icon_size" tools:override="true">18dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
