--- a/app/src/main/res/layout/item_chapter.xml
+++ b/app/src/main/res/layout/item_chapter.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="4dp"
+    android:paddingStart="8dp"
     android:paddingTop="4dp"
-    android:paddingBottom="4dp"
-    android:weightSum="10">
+    android:paddingEnd="8dp"
+    android:paddingBottom="4dp">
 
     <TextView
         android:id="@+id/tv_chapter_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center|center_vertical"
+        android:fontFamily="@font/comfortaa_regular"
+        android:paddingEnd="8dp"
+        android:textColor="@color/color_tab" />
 
     <TextView
         android:id="@+id/tv_price_chapter"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="8"
-        android:paddingEnd="8dp"
-        android:drawableEnd="@drawable/ic_google" />
-</LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center|center_vertical"
+        android:drawableEnd="@drawable/ic_google"
+        android:drawablePadding="4dp"
+        android:fontFamily="@font/comfortaa_regular"
+        android:textColor="@color/purple" />
+</RelativeLayout>
