--- a/app/src/main/res/layout/activity_infor.xml
+++ b/app/src/main/res/layout/activity_infor.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/header_layout"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:background="@drawable/bleach">
+                android:background="@color/colorPrimary">
 
                 <LinearLayout
                     android:layout_width="match_parent"
