--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -14,77 +14,74 @@
         android:layout_height="match_parent"
         android:background="@android:color/white">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+
+        <!-- The primary full-screen view. This can be replaced with whatever view
+             is needed to present your content, e.g. VideoView, SurfaceView,
+             TextureView, etc. -->
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <!-- The primary full-screen view. This can be replaced with whatever view
-                 is needed to present your content, e.g. VideoView, SurfaceView,
-                 TextureView, etc. -->
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/view_pager"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:keepScreenOn="true"
+            android:visibility="gone" />
+
+        <WebView
+            android:id="@+id/fullscreen_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:keepScreenOn="true" />
+
+
+        <!-- This FrameLayout insets its children based on system windows using
+             android:fitsSystemWindows. -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true">
+
+            <LinearLayout
+                android:id="@+id/fullscreen_content_controls"
+                style="?metaButtonBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:keepScreenOn="true"
-                android:visibility="gone" />
+                android:layout_gravity="bottom|center_horizontal"
+                android:background="@color/black_overlay"
+                android:orientation="horizontal"
+                tools:ignore="UselessParent">
 
-            <WebView
-                android:id="@+id/fullscreen_content"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:keepScreenOn="true" />
-
-
-            <!-- This FrameLayout insets its children based on system windows using
-                 android:fitsSystemWindows. -->
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true">
-
-                <LinearLayout
-                    android:id="@+id/fullscreen_content_controls"
-                    style="?metaButtonBarStyle"
+                <SeekBar
+                    android:id="@+id/seekbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:background="@color/black_overlay"
-                    android:orientation="horizontal"
-                    tools:ignore="UselessParent">
+                    android:layout_height="25dp"
+                    android:background="@android:color/white"
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progress="5"
+                    android:visibility="gone" />
 
-                    <SeekBar
-                        android:id="@+id/seekbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@android:color/white"
-                        android:indeterminate="false"
-                        android:max="100"
-                        android:progress="5"
-                        android:visibility="gone" />
+            </LinearLayout>
+        </FrameLayout>
 
-                </LinearLayout>
-            </FrameLayout>
+        <include layout="@layout/fab_reveal_layout" />
 
-            <include layout="@layout/fab_reveal_layout" />
-
-            <net.siji.movablefloatingactionbutton.MovableFloatingActionButton
-                android:id="@+id/fab_view_act"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom|end"
-                app:backgroundTint="@color/white"
-                app:borderWidth="1dp"
-                app:srcCompat="@drawable/ic_add_black" />
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <net.siji.movablefloatingactionbutton.MovableFloatingActionButton
+            android:id="@+id/fab_view_act"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom|end"
+            android:layout_margin="16dp"
+            app:backgroundTint="@color/white"
+            app:borderWidth="1dp"
+            app:srcCompat="@drawable/ic_add_black" />
     </FrameLayout>
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
+        android:layout_gravity="end"
         android:background="@android:color/white"
         android:fitsSystemWindows="false">
 
@@ -99,12 +96,18 @@
                 android:id="@+id/tv_nav_title_comic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@color/color_tab"
                 android:gravity="center"
                 android:padding="12dp"
                 android:text="Table"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/chapter_recycler_view"
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_height="match_parent" />
 
             <ListView
                 android:id="@+id/listview_chapter"
