--- a/app/src/main/res/layout/fab_reveal_layout.xml
+++ b/app/src/main/res/layout/fab_reveal_layout.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/exchange_fab_lb"
+                android:id="@+id/tv_exchange_fab_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -34,7 +34,7 @@
                 android:textColor="#fff" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/exchange_fab"
+                android:id="@+id/exchange_fab_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/fab_margin"
@@ -42,8 +42,8 @@
                 android:elevation="0dp"
                 app:backgroundTint="@color/white"
                 app:borderWidth="0dp"
-                app:fabSize="mini"
-                app:srcCompat="@drawable/ic_google" />
+                app:fabSize="normal"
+                app:srcCompat="@drawable/ic_slide_mode" />
 
 
         </LinearLayout>
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:elevation="8dp"
-                android:text="@string/signin_by_google"
+                android:text="@string/title_bao_loi"
                 android:textColor="#fff" />
 
 
@@ -74,8 +74,8 @@
                 android:elevation="0dp"
                 app:backgroundTint="@color/white"
                 app:borderWidth="0dp"
-                app:fabSize="mini"
-                app:srcCompat="@drawable/ic_google" />
+                app:fabSize="normal"
+                app:srcCompat="@drawable/ic_error_outline_red" />
         </LinearLayout>
     </LinearLayout>
 
