--- a/app/src/main/res/menu/info_menu.xml
+++ b/app/src/main/res/menu/info_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_white"
-        android:title="Search"
-        app:showAsAction="always" />
+        android:id="@+id/menu_main_share"
+        android:icon="@drawable/ic_share_white"
+        app:showAsAction="always"
+        android:title="Share" />
 </menu>
