--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -75,6 +75,7 @@
             app:backgroundTint="@color/white"
             app:borderWidth="1dp"
             app:srcCompat="@drawable/ic_add_black" />
+
     </FrameLayout>
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
     <com.google.android.material.navigation.NavigationView
@@ -90,30 +91,24 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <!--            <include layout="@layout/nav_header_main" />-->
-
-            <TextView
-                android:id="@+id/tv_nav_title_comic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/color_tab"
-                android:gravity="center"
-                android:padding="12dp"
-                android:text="Table"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
+            <include layout="@layout/nav_header_main" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chapter_recycler_view"
                 android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:visibility="gone" />
 
             <ListView
                 android:id="@+id/listview_chapter"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:visibility="gone"
+                android:layout_height="match_parent" />
+            <ListView
+                android:id="@+id/listview_translator"
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_height="match_parent" />
         </LinearLayout>
     </com.google.android.material.navigation.NavigationView>
 
