--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -14,26 +14,37 @@
         android:layout_height="match_parent"
         android:background="@android:color/white">
 
-
-        <!-- The primary full-screen view. This can be replaced with whatever view
-             is needed to present your content, e.g. VideoView, SurfaceView,
-             TextureView, etc. -->
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/view_pager"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:keepScreenOn="true"
-            android:visibility="gone" />
+            android:layout_height="match_parent">
 
-        <WebView
-            android:id="@+id/fullscreen_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:keepScreenOn="true" />
+            <!-- The primary full-screen view. This can be replaced with whatever view
+                 is needed to present your content, e.g. VideoView, SurfaceView,
+                 TextureView, etc. -->
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:keepScreenOn="true"
+                android:visibility="gone" />
 
+            <WebView
+                android:id="@+id/fullscreen_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:keepScreenOn="true" />
 
+            <LinearLayout
+                android:id="@+id/action"
+                android:layout_width="match_parent"
+                android:layout_height="44sp"
+                android:orientation="horizontal"
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/transparent" />
+
+        </RelativeLayout>
         <!-- This FrameLayout insets its children based on system windows using
              android:fitsSystemWindows. -->
         <FrameLayout
@@ -82,34 +93,53 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="end"
+        android:layout_gravity="start"
         android:background="@android:color/white"
         android:fitsSystemWindows="false">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <include layout="@layout/nav_header_main" />
+            <include
+                android:id="@+id/nav_header"
+                layout="@layout/nav_header_main" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chapter_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@+id/chapter_reading_tv"
+                android:layout_below="@id/nav_header"
                 android:visibility="gone" />
 
             <ListView
                 android:id="@+id/listview_chapter"
                 android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_above="@+id/chapter_reading_tv"
+                android:layout_below="@id/nav_header"
+                android:visibility="gone" />
+
             <ListView
                 android:id="@+id/listview_translator"
                 android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="match_parent" />
-        </LinearLayout>
+                android:layout_height="match_parent"
+                android:layout_above="@+id/chapter_reading_tv"
+                android:layout_below="@id/nav_header"
+                android:visibility="gone" />
+            <TextView
+                android:id="@+id/chapter_reading_tv"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:layout_alignParentBottom="true"
+                android:text="Bạn đang đọc"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"/>
+
+        </RelativeLayout>
     </com.google.android.material.navigation.NavigationView>
 
 
