--- a/app/src/main/res/layout/fragment_home_view.xml
+++ b/app/src/main/res/layout/fragment_home_view.xml
@@ -18,13 +18,13 @@
 
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/banner_koniki"
+                android:id="@+id/banner_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_marginStart="6dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="6dp"
+                android:layout_marginBottom="10dp"
                 app:cardCornerRadius="6dp"
                 app:cardElevation="1dp">
 
@@ -36,16 +36,22 @@
                     <androidx.viewpager.widget.ViewPager
                         android:id="@+id/viewPager"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:clipToPadding="false"
+                        android:foregroundGravity="center"
+                        android:overScrollMode="never"
+                        />
 
-                    <net.siji.imageSliderViewPager.IndicatorView
-                        android:id="@+id/indicator"
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tab_indicator_line_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="14dp"
-                        app:hado_radius_selected="5dp"
-                        app:hado_radius_unselected="3dp" />
+                        android:layout_marginBottom="8dp"
+                        app:tabBackground="@drawable/indicator_tab_selector"
+                        app:tabGravity="center"
+                        app:tabIndicatorHeight="0dp" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -57,8 +63,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="6dp"
                 android:layout_marginBottom="12dp"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -93,6 +98,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_form_new_comic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -101,7 +107,6 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/ll_form_new_comic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
@@ -134,6 +139,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_form_view_day"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -142,7 +148,6 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/ll_form_view_day"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
@@ -174,6 +179,68 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_form_view_ads"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:orientation="vertical"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="6dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center_vertical"
+                        android:background="@color/colorPrimary"></TextView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:fontFamily="@font/comfortaa_regular"
+                        android:text="@string/advertise"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="120sp">
+
+                    <androidx.viewpager.widget.ViewPager
+                        android:id="@+id/myviewpager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:clipToPadding="false"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:foregroundGravity="center"
+                        android:overScrollMode="never"
+                         />
+
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tab_indicator_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        app:tabBackground="@drawable/indicator_dot_tab_selector"
+                        app:tabGravity="center"
+                        app:tabIndicatorHeight="0dp" />
+                </FrameLayout>
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ll_form_comic_full"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -182,7 +249,6 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/ll_form_comic_full"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
