--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bleach">
+    android:background="@drawable/holder_error">
 
     <TextView
         android:id="@+id/fullscreen_content"
@@ -42,7 +42,7 @@
     <!--        android:layout_width="200dp"-->
     <!--        android:layout_height="200dp"-->
     <!--        android:layout_marginBottom="20dp"-->
-    <!--        android:src="@drawable/bleach"-->
+    <!--        android:src="@drawable/holder_error"-->
     <!--        />-->
 
     <!--    <TextView-->
