--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -40,9 +40,10 @@
                 android:id="@+id/action_prev"
                 android:layout_width="44sp"
                 android:layout_height="44sp"
+                android:layout_marginStart="1dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:background="@color/silver_transparent">
+                android:background="#80FFFFFF">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -53,11 +54,12 @@
 
             <FrameLayout
                 android:id="@+id/action_next"
+                android:layout_marginEnd="1dp"
                 android:layout_width="44sp"
                 android:layout_height="44sp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:background="@color/silver_transparent">
+                android:background="#80FFFFFF">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -102,7 +104,7 @@
             android:id="@+id/fab_view_act"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom|end"
+            android:layout_gravity="center"
             android:layout_margin="16dp"
             app:backgroundTint="@color/white"
             app:borderWidth="1dp"
