--- a/app/src/main/res/layout/fab_reveal_layout.xml
+++ b/app/src/main/res/layout/fab_reveal_layout.xml
@@ -77,6 +77,36 @@
                 app:fabSize="normal"
                 app:srcCompat="@drawable/ic_error_outline_red" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:elevation="8dp"
+                android:text="@string/title_home"
+                android:textColor="#fff" />
+
+
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/home_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginRight="@dimen/fab_margin"
+                android:elevation="0dp"
+                app:backgroundTint="@color/white"
+                app:borderWidth="0dp"
+                app:fabSize="normal"
+                app:srcCompat="@drawable/ic_home" />
+        </LinearLayout>
     </LinearLayout>
 
 
