--- a/app/src/main/res/layout/fragment_carousel.xml
+++ b/app/src/main/res/layout/fragment_carousel.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:scaleType="matrix"
-            android:src="@drawable/bleach" />
+            android:src="@drawable/holder_error" />
     </LinearLayout>
 
     <TextView
