--- a/app/src/main/res/layout/layout_infor_tmp.xml
+++ b/app/src/main/res/layout/layout_infor_tmp.xml
@@ -49,7 +49,7 @@
                             android:layout_width="90dp"
                             android:layout_height="120dp"
                             android:scaleType="fitXY"
-                            android:src="@drawable/bleach"
+                            android:src="@drawable/holder_error"
                             app:layout_collapseMode="parallax" />
                     </androidx.cardview.widget.CardView>
 
@@ -374,7 +374,7 @@
 
     <!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:orientation="horizontal"--><!--android:weightSum="3">-->
 
-    <!--<ImageView--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:layout_weight="2"--><!--android:scaleType="fitXY"--><!--android:src="@drawable/bleach" />-->
+    <!--<ImageView--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:layout_weight="2"--><!--android:scaleType="fitXY"--><!--android:src="@drawable/holder_error" />-->
 
     <!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@color/colorPrimary"--><!--android:layout_weight="1"--><!--android:orientation="vertical">-->
 
