--- a/app/src/main/res/menu/info_menu.xml
+++ b/app/src/main/res/menu/info_menu.xml
@@ -2,9 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <item
-        android:id="@+id/menu_main_share"
-        android:icon="@drawable/ic_share_white"
+        android:id="@+id/menu_main_subcrise"
+        android:icon="@drawable/ic_heart_border"
         app:showAsAction="always"
-        android:title="Share" />
+        android:title="subcribe" />
 </menu>
