--- a/app/src/main/res/layout/fab_reveal_layout.xml
+++ b/app/src/main/res/layout/fab_reveal_layout.xml
@@ -105,7 +105,7 @@
                 app:backgroundTint="@color/white"
                 app:borderWidth="0dp"
                 app:fabSize="normal"
-                app:srcCompat="@drawable/ic_home" />
+                app:srcCompat="@drawable/ic_home_black" />
         </LinearLayout>
     </LinearLayout>
 
