--- a/app/src/main/res/layout/layout_dialog_notification_bug.xml
+++ b/app/src/main/res/layout/layout_dialog_notification_bug.xml
@@ -12,7 +12,7 @@
         android:textSize="20dp"
         android:gravity="center"
         android:textAppearance="@style/Base.AlertDialog.AppCompat"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/exit_label"
         android:scaleType="center"
         android:background="@color/myColorPrimary"
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLength="150"
+        android:lines="2"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="4dp"
         android:hint="@string/title_noi_dung" />
