--- a/app/src/main/res/layout/layout_find_comic.xml
+++ b/app/src/main/res/layout/layout_find_comic.xml
@@ -4,51 +4,59 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img_dialog"
+    <TextView
+        android:id="@+id/tv_title_find"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         />
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="@string/yeu_cau_tim_truyen"
+        android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/tv_msg_dialog"
+    <EditText
+        android:id="@+id/edt_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="8dp"
-        android:textSize="18sp"
         android:fontFamily="@font/comfortaa_regular"
-        android:text="@string/title_reward_dialog"
+        android:hint="@string/title_noi_dung"
+        android:maxLength="150"
+        android:lines="2"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:textStyle="normal" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_margin="8dp"
+        android:orientation="horizontal"
         android:weightSum="2">
 
         <TextView
-            android:id="@+id/reward_dialog_btn_cancel"
+            android:id="@+id/find_dialog_btn_cancel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:textStyle="bold"
             android:layout_marginEnd="4dp"
+            android:layout_weight="1"
             android:background="?android:attr/selectableItemBackground"
-            android:text="@string/cancel_btn" />
+            android:gravity="center"
+            android:text="@string/cancel_btn"
+            android:textStyle="bold" />
 
         <Button
+            android:id="@+id/find_dialog_btn_ok"
             style="@style/com_facebook_button"
-            android:id="@+id/reward_dialog_btn_ok"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/xac_nhan"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:background="@color/myColorPrimary"></Button>
+            android:background="@color/myColorPrimary"
+            android:text="@string/xac_nhan"
+            android:textStyle="bold"></Button>
     </LinearLayout>
 </LinearLayout>
 
